Calendar file without main

--- a/Calendar.html
+++ b/Calendar.html
@@ -582,7 +582,7 @@
             }
             //document.getElementById('month').innerHTML = null;
             document.getElementById('month').appendChild(container);
-            main.replaceChild(container1, container);
+            //main.replaceChild(container1, container);
         }
 
         //document.getElementById("month").innerHTML = calendar.months[0].month + "</br>" +
